Fix scrollbar bug

--- a/frontend-vue/src/assets/output.css
+++ b/frontend-vue/src/assets/output.css
@@ -889,6 +889,14 @@ video {
   margin-bottom: 280px;
 }
 
+.mb-\[550px\] {
+  margin-bottom: 550px;
+}
+
+.mb-\[5050px\] {
+  margin-bottom: 5050px;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -1531,6 +1539,12 @@ video {
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
+.space-x-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .divide-y > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-y-reverse: 0;
   border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
@@ -1552,6 +1566,10 @@ video {
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-visible {
+  overflow: visible;
 }
 
 .overflow-x-auto {
@@ -1687,6 +1705,14 @@ video {
   border-left-width: 4px;
 }
 
+.border-b-\[2px\] {
+  border-bottom-width: 2px;
+}
+
+.border-b-\[1px\] {
+  border-bottom-width: 1px;
+}
+
 .border-none {
   border-style: none;
 }
@@ -1808,6 +1834,14 @@ video {
 .border-l-\[\#00e676\] {
   --tw-border-opacity: 1;
   border-left-color: rgb(0 230 118 / var(--tw-border-opacity, 1));
+}
+
+.border-b-\[px\] {
+  border-bottom-color: px;
+}
+
+.border-b-transparent {
+  border-bottom-color: transparent;
 }
 
 .bg-\[\#00000007\] {
@@ -2750,6 +2784,11 @@ body {
   border-color: rgb(107 114 128 / var(--tw-border-opacity, 1));
 }
 
+.hover\:border-gray-200:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity, 1));
+}
+
 .hover\:\!bg-white\/10:hover {
   background-color: rgb(255 255 255 / 0.1) !important;
 }
@@ -3145,6 +3184,11 @@ body {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.dark\:text-gray-100:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity, 1));
+}
+
 .dark\:outline-white:is(.dark *) {
   outline-color: #fff;
 }
@@ -3188,6 +3232,15 @@ body {
 .dark\:hover\:bg-red-800:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(153 27 27 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:hover\:bg-\[\#d9d9d9\]\/5:hover:is(.dark *) {
+  background-color: rgb(217 217 217 / 0.05);
+}
+
+.dark\:hover\:text-gray-300:hover:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity, 1));
 }
 
 .group:hover .dark\:group-hover\:border-\[\#ffffff4d\]:is(.dark *) {
